<resources>
    <string name="app_name">Gear 360</string>
    <string name="get_connected">Get connected</string>
    <string name="gallery">Gallery</string>
    <string name="gallery_desc">View your pictures and videos.</string>
    <string name="settings">Settings</string>
    <string name="tab_phone">PHONE</string>
    <string name="tab_gear">GEAR 360</string>
    <string name="no_media_title">No pictures or videos</string>
    <string name="no_media_desc">After you save pictures or videos from your Gear 360 to your phone, they\'ll appear here.</string>
    <string name="firmware_version">Firmware version</string>
    <string name="gallery_settings">Gallery settings</string>
    <string name="about_app">About Gear 360 App</string>
    <string name="take_photo">Take Photo</string>
    <string name="textline">- - - - -</string>
    <string name="save_to_phone">Save to Phone</string>
    <string name="save_to_phone_btn">Save to Phone</string>
    <string name="delete">Delete</string>
    <string name="reset_camera_connection">Reset Camera Connection</string>
    <string name="r210glu0aqk1">R210GLU0AQK1</string>
    <string name="latest_version">Latest version</string>
    <string name="battery_level">Battery Level</string>
    <string name="fetching">Fetching...</string>
    <string name="select">Select</string>
    <string name="take_photo_text">Take Photo</string>
</resources>